--- a/css/style_cv.css
+++ b/css/style_cv.css
@@ -160,3 +160,41 @@ button {
     padding: 0em 0em;
     text-align: center;
 }
+
+.btn-phd, .btn-phd:active{
+	background-color: #FF69B4;
+  border-color : white;
+  color: white;
+  display: inline;
+  font-variant:inherit;
+  font-style:inherit;
+  width:30%;
+  font-size:medium;
+  float:right;
+  font-weight: normal;
+  font-style: normal;
+  font-variant:normal;
+  height:1.5em;
+  width:15%;
+  padding: 0em 0em;
+  text-align: center;
+}
+
+.btn-phd:hover, .btn-phd:focus{
+    background-color: #FFFFFF;
+		border-color: #FF69B4;
+    color: black;
+    display: inline;
+    font-variant:inherit;
+    font-style:inherit;
+    width:30%;
+    font-size:medium;
+    float:right;
+    font-weight: normal;
+    font-style: normal;
+    font-variant:normal;
+    height:1.5em;
+    width:15%;
+    padding: 0em 0em;
+    text-align: center;
+}
