--- a/css/style2.css
+++ b/css/style2.css
@@ -1,4 +1,8 @@
 /* Move down content because we have a fixed navbar that is 50px tall */
+html {
+  scroll-padding-top: 105px; /* height of sticky header */
+}
+
 html body{
 background-color : #FFFFFF;
 }
