--- a/css/style_cv.css
+++ b/css/style_cv.css
@@ -258,6 +258,38 @@ button {
     text-align: center;
 }
 
+.btn-blog, .btn-blog:active{
+  background-color: #ee2523;
+  border-color : white;
+  color: white;
+  width:11em;
+  display: inline;
+  font-size:medium;
+  float:right;
+  font-weight: normal;
+  font-style: normal;
+  font-variant:normal;
+  padding: 0em 0em;
+  text-align: center;
+}
+
+.btn-blog:hover, .btn-blog:focus{
+    background-color: #FFFFFF;
+    border-color: #ee2523;
+    color: black;
+    font-variant:inherit;
+    font-style:inherit;
+    width:11em;
+    display: inline;
+    font-size:medium;
+    float:right;
+    font-weight: normal;
+    font-style: normal;
+    font-variant:normal;
+    padding: 0em 0em;
+    text-align: center;
+}
+
 .btn-pikasle, .btn-pikasle:active{
   background-color: #0071A9;
   border-color : white;
